# DTEAM-django-test-task

./: .env_example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  sample_data.json
CVProject/: __init__.py  celery.py  settings.py  urls.py
audit/: middleware.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
main/: admin.py  models.py  serializers.py  tasks.py  tests.py  translation.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_cv_options.py
main/tests/: test_api_views.py  test_views.py
static/assets/css/: styles.css
static/assets/js/: cv_detail.js
templates/: base.html  pagination.html
templates/audit/: request_logs.html
templates/main/: cv_detail.html  cv_pdf.html  index.html  settings.html
tests/audit/: test_logging.py
tests/main/: test_views.py
