[project]
name = "dteam-django-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Serhii Berdianskyi",email = "sberdianskyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "crispy-bootstrap5 (>=2025.4,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
